
gridftpdir = $(sysconfdir)/gridftp-hdfs
dist_gridftp_DATA = gridftp.conf gridftp-inetd.conf gridftp-debug.conf replica-map.conf

sysconfigdir = $(sysconfdir)/sysconfig
dist_sysconfig_DATA = gridftp-hdfs

logrotatedir = $(sysconfdir)/logrotate.d
dist_logrotate_DATA = gridftp-hdfs.logrotate

envdir = $(datadir)/gridftp-hdfs
dist_env_DATA = gridftp-hdfs-environment

