
AC_REVISION($Revision$)

AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR([build-aux])

GLOBUS_INIT

AM_PROG_LIBTOOL
AC_CHECK_LIB(ltdl, lt_dlopen)

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)

LAC_DOXYGEN(["../library"])

GLOBUS_FINALIZE
AC_OUTPUT(
        Makefile
        pkgdata/Makefile
        pkgdata/pkg_data_src.gpt
	library/Makefile
	doxygen/Makefile
	doxygen/Doxyfile 
	doxygen/Doxyfile-internal
	version.h
)
