include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top

setup_SCRIPTS = \
	setup-common-sh-scripts \
	setup-globus-common \
	setup-globus-common.pl \
	setup-globus-common-test

setup_DATA = \
	globus-hostname.in

SUBDIRS = pkgdata

EXTRA_DIST = \
	setup-common-sh-scripts \
	setup-common-sh-scripts.in \
	setup-globus-common \
	setup-globus-common.pl \
	setup-globus-common-test \
	globus-hostname.in

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top



