include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top

setup_SCRIPTS = \
	findshelltools \
	setup-tmpdirs \
	setup-globus-common \
	setup-globus-common.pl

setup_DATA = \
        globus-script-initializer.in \
        globus-sh-tools-vars.sh.in \
        Paths.in 

SUBDIRS = pkgdata

EXTRA_DIST = \
	findshelltools \
	findshelltools.in \
	setup-tmpdirs \
	setup-tmpdirs.in \
        globus-script-initializer.in \
        globus-sh-tools-vars.sh.in \
        Paths.in \
	setup-globus-common \
	setup-globus-common.pl

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top



